fixed up some css the footer apears on the page and added overflow option to UL

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,17 +17,22 @@ body {
     /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Exo 2', sans-serif;
+    margin: 0;
 }
 
 #logo {
     color: #153677;
 }
 
-.container { */
+.container { 
+    flex: 1;
     width: 100%;
-    min-height: 100vh;
+    min-height: 95vh;
     background: linear-gradient(135deg, #153677, #4e085f);
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #habit-tracker {
@@ -73,6 +78,10 @@ button:hover {
 ul {
     list-style: none;
     padding: 0;
+    margin: 0;
+    max-height: 400px; /* Adjust this value as needed */
+    overflow-y: auto;
+    flex: 1;
 }
 
 li {
@@ -118,14 +127,11 @@ h1 {
 
 /*Main*/
 main {
-    flex: 1;
-    margin-top: 40px;
+    flex: 1 auto;
 }
 
-ooter {
-    background-color: #153677;
-    color: #fff;
+footer {
+    background-color: #ffffff;
+    color: #153677;
     padding: 1rem;
-    text-align: center;
-    margin-top: 2rem;
 }
